# virtual-brain-engine

./: .gitignore  CLAUDE.md  DIGITAL_TWIN_SPEC.md  PERSONAL_MEMORY_BRAIN_SPEC.md  README.md  SPEC.md  index.html  package-lock.json  package.json  tsconfig.json  ultraplan-1.txt  vite.config.ts  vitest.config.ts  vitest.integration.config.ts
.github/workflows/: ci.yml
computer-brain/: .gitignore  Cargo.toml
computer-brain/apps/desktop-pet/: index.html  package.json  tailwind.config.js  vite.config.ts
computer-brain/apps/desktop-pet/src/: main.tsx  styles.css
computer-brain/apps/desktop-pet/src-tauri/: Cargo.toml  tauri.conf.json
computer-brain/apps/desktop-pet/src-tauri/capabilities/: default.json
computer-brain/apps/desktop-pet/src-tauri/src/: lib.rs  main.rs
computer-brain/config/: default.toml
computer-brain/crates/adaptation-engine/: Cargo.toml
computer-brain/crates/adaptation-engine/src/: lib.rs
computer-brain/crates/agent-runtime/: Cargo.toml
computer-brain/crates/agent-runtime/src/: lib.rs
computer-brain/crates/brain-core/: Cargo.toml
computer-brain/crates/brain-core/src/: lib.rs
computer-brain/crates/brain-core/tests/: smoke.rs
computer-brain/crates/capability-system/: Cargo.toml
computer-brain/crates/capability-system/src/: lib.rs
computer-brain/crates/cognitive-state/: Cargo.toml
computer-brain/crates/cognitive-state/src/: lib.rs
computer-brain/crates/conscious-workspace/: Cargo.toml
computer-brain/crates/conscious-workspace/src/: attention.rs  bandwidth.rs  context_activation.rs  lib.rs  meta_attention.rs  thought_streams.rs  working_memory.rs
computer-brain/crates/context-engine/: Cargo.toml
computer-brain/crates/context-engine/src/: lib.rs
computer-brain/crates/desktop-bridge/: Cargo.toml
computer-brain/crates/desktop-bridge/src/: lib.rs
computer-brain/crates/evolution-engine/: Cargo.toml
computer-brain/crates/evolution-engine/src/: lib.rs
computer-brain/crates/execution-graph/: Cargo.toml
computer-brain/crates/execution-graph/src/: lib.rs
computer-brain/crates/knowledge-graph/: Cargo.toml
computer-brain/crates/knowledge-graph/src/: lib.rs
computer-brain/crates/learning-engine/: Cargo.toml
computer-brain/crates/learning-engine/src/: lib.rs
computer-brain/crates/memory-cortex/: Cargo.toml
computer-brain/crates/memory-cortex/src/: lib.rs  schema.sql
computer-brain/crates/nervous-system/: Cargo.toml
computer-brain/crates/nervous-system/src/: lib.rs
computer-brain/crates/observability/: Cargo.toml
computer-brain/crates/observability/src/: lib.rs
computer-brain/crates/perception-engine/: Cargo.toml
computer-brain/crates/perception-engine/src/: lib.rs
computer-brain/crates/personality-engine/: Cargo.toml
computer-brain/crates/personality-engine/src/: lib.rs
computer-brain/crates/planner-engine/: Cargo.toml
computer-brain/crates/planner-engine/src/: lib.rs
computer-brain/crates/planning-engine/: Cargo.toml
computer-brain/crates/planning-engine/src/: lib.rs
computer-brain/crates/reflection-engine/: Cargo.toml
computer-brain/crates/reflection-engine/src/: lib.rs
computer-brain/crates/safety-layer/: Cargo.toml
computer-brain/crates/safety-layer/src/: lib.rs
computer-brain/crates/semantic-memory/: Cargo.toml
computer-brain/crates/semantic-memory/src/: lib.rs
computer-brain/crates/sensory-system/: Cargo.toml
computer-brain/crates/sensory-system/src/: lib.rs
computer-brain/crates/shared-types/: Cargo.toml
computer-brain/crates/shared-types/src/: lib.rs
computer-brain/crates/skill-learning/: Cargo.toml
computer-brain/crates/skill-learning/src/: lib.rs
computer-brain/crates/temporal-engine/: Cargo.toml
computer-brain/crates/temporal-engine/src/: lib.rs
computer-brain/crates/tool-cortex/: Cargo.toml
computer-brain/crates/tool-cortex/src/: lib.rs
computer-brain/crates/understanding-engine/: Cargo.toml
computer-brain/crates/understanding-engine/src/: lib.rs
computer-brain/crates/web-cortex/: Cargo.toml
computer-brain/crates/web-cortex/src/: browser.rs  browser_fallback.rs  lib.rs  page_scraper.rs  sanitizer.rs  search.rs
computer-brain/crates/web-cortex/src/agents/: mod.rs  search_agent.rs
computer-brain/crates/workflow-engine/: Cargo.toml
computer-brain/crates/workflow-engine/src/: lib.rs
computer-brain/docs/: ARCHITECTURE.md  BUILD.md  UNIFIED_PROMPT.md
crates/autonomous-runtime/: Cargo.toml
crates/context-engine/: Cargo.toml
crates/knowledge-graph/: Cargo.toml
crates/personality-engine/: Cargo.toml
crates/semantic-memory/: Cargo.toml
crates/temporal-engine/: Cargo.toml
crates/workflow-engine/: Cargo.toml
docs/: CIVILIZATION_ARCHITECTURE.md  IMPROVEMENT_PLAN.md  MULTIMODAL_SENSORY_CORTEX_SPEC.md  NEUROSCIENCE_MODULES.md  PHASE2_ARCHITECTURE.md  UPGRADE_SUMMARY.md  VIRTUAL_BRAIN_ENGINE_BLUEPRINT.md
docs/plans/: 2026-05-22-personal-brain-os-roadmap.md  2026-05-22-spiking-engine.md
scripts/: cdp-probe.mjs  cdp-shot.mjs  diag-probe.mjs  diag-spiking.ts  gate.mjs  scan.mjs  server-smoke.mjs  smoke-actions.mjs  test-all.mjs  verify-canvas.mjs
server/: package-lock.json  package.json  tsconfig.json
server/scripts/: agents-selfcheck.ts  attention-selfcheck.ts  graph-selfcheck.ts  memory-selfcheck.ts  perception-selfcheck.ts  ranker-selfcheck.ts  twin-selfcheck.ts  worldmodel-selfcheck.ts
server/src/: config.ts  index.ts
shared/: brainSnapshot.ts  civilization.ts  connector.ts  evolution.ts  imagination.ts  memory.ts  organism.ts  perception.ts  phase2.ts  pipeline.ts  replay.ts  swarm.ts  twin.ts  vision.ts
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  database.rs  file_watcher.rs  lib.rs  llm_probe.rs  phase2.rs  screen_capture.rs  system_monitor.rs
src/components/: AiCompanion.tsx  AiPickOverlay.tsx  AskPanel.tsx  BrainControls.tsx  BrainOSPanel.tsx  (+25 more)
tests/: NEUROSCIENCE_INTEGRATION.md  neuroscienceValidation.test.ts  signalSimulation.test.ts  spikingEngine.test.ts
worker/: README.md  main.py  requirements-ml.txt
(+161 files in other folders)
