[workspace]
resolver = "2"
members = [
  "crates/shared-types",
  "crates/brain-core",
  "crates/agent-runtime",
  "crates/nervous-system",
  "crates/cognitive-state",
  "crates/memory-cortex",
  "crates/semantic-memory",
  "crates/knowledge-graph",
  "crates/context-engine",
  "crates/planner-engine",
  "crates/execution-graph",
  "crates/capability-system",
  "crates/temporal-engine",
  "crates/workflow-engine",
  "crates/tool-cortex",
  "crates/sensory-system",
  "crates/personality-engine",
  "crates/safety-layer",
  "crates/observability",
  "crates/desktop-bridge",
  "apps/desktop-pet/src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"
license = "MIT"
authors = ["Computer Brain"]

[workspace.dependencies]
agent-runtime = { path = "crates/agent-runtime" }
brain-core = { path = "crates/brain-core" }
capability-system = { path = "crates/capability-system" }
cognitive-state = { path = "crates/cognitive-state" }
context-engine = { path = "crates/context-engine" }
desktop-bridge = { path = "crates/desktop-bridge" }
execution-graph = { path = "crates/execution-graph" }
knowledge-graph = { path = "crates/knowledge-graph" }
memory-cortex = { path = "crates/memory-cortex" }
nervous-system = { path = "crates/nervous-system" }
observability = { path = "crates/observability" }
personality-engine = { path = "crates/personality-engine" }
planner-engine = { path = "crates/planner-engine" }
safety-layer = { path = "crates/safety-layer" }
semantic-memory = { path = "crates/semantic-memory" }
sensory-system = { path = "crates/sensory-system" }
shared-types = { path = "crates/shared-types" }
temporal-engine = { path = "crates/temporal-engine" }
tool-cortex = { path = "crates/tool-cortex" }
workflow-engine = { path = "crates/workflow-engine" }

anyhow = "1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
notify = "7"
parking_lot = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.33"
tauri = { version = "2.11.1", features = ["tray-icon", "macos-private-api"] }
tauri-build = "2.6.1"
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1", default-features = false, features = ["std"] }
uuid = { version = "1", features = ["v4", "serde"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
