[package]
name = "virtual-brain-engine"
version = "0.1.0"
description = "A brain-inspired system monitor and project memory companion"
authors = ["Virtual Brain Engine"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
tauri = { version = "2.11.1", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"

# System monitoring
sysinfo = "0.33"

# File watching
notify = "7"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID for unique IDs
uuid = { version = "1", features = ["v4", "serde"] }

# Directories for app data
dirs = "5"

# Git operations
git2 = "0.19"

# Encoding/Decoding
base64 = "0.22"

# Thread-safe shared state
parking_lot = "0.12"

# HTTP client for the local-LLM runtime probe. rustls-tls keeps the binary
# self-contained and avoids depending on the system OpenSSL.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
futures-util = "0.3"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"