[package]
name = "agent-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
nervous-system.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
shared-types.workspace = true
tokio.workspace = true
