[package]
name = "cognitive-state"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
dirs.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
shared-types.workspace = true
