[package]
name = "desktop-bridge"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
brain-core.workspace = true
cognitive-state.workspace = true
serde.workspace = true
serde_json.workspace = true
semantic-memory.workspace = true
shared-types.workspace = true
tokio.workspace = true
