[package]
name = "memory-cortex"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
parking_lot.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
shared-types.workspace = true
skill-learning.workspace = true
perception-engine.workspace = true
understanding-engine.workspace = true
planning-engine.workspace = true
reflection-engine.workspace = true
learning-engine.workspace = true
adaptation-engine.workspace = true
evolution-engine.workspace = true
uuid.workspace = true
