[package]
name = "planning-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
capability-system.workspace = true
chrono.workspace = true
planner-engine.workspace = true
serde.workspace = true
serde_json.workspace = true
shared-types.workspace = true
understanding-engine.workspace = true
