[package]
name = "sensory-system"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
notify.workspace = true
nervous-system.workspace = true
serde.workspace = true
serde_json.workspace = true
shared-types.workspace = true
sysinfo.workspace = true
tokio.workspace = true
uuid.workspace = true
