[package]
name = "tool-cortex"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
reqwest.workspace = true
safety-layer.workspace = true
serde.workspace = true
serde_json.workspace = true
shared-types.workspace = true
tokio.workspace = true
uuid.workspace = true
