[package]
name = "understanding-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
perception-engine.workspace = true
serde.workspace = true
serde_json.workspace = true
shared-types.workspace = true
