[package]
name = "web-cortex"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
parking_lot.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
shared-types.workspace = true
safety-layer.workspace = true
tokio.workspace = true
tracing.workspace = true

playwright = { version = "0.0.20", optional = true }
regex = "1"
scraper = "0.21"
url = "2"

[features]
default = ["runtime-async-std"]
runtime-async-std = ["playwright"]
runtime-tokio = ["playwright"]
headless = ["playwright"]